# GifEncoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp  main.cpp  test.cpp
.github/workflows/: build.yml  linux.yml  macos.yml  windows-x64.yml  windows-x86.yml
egif/: GifEncoder.cpp  GifEncoder.h
egif/giflib/: egif_lib.cpp
gif/: GifEncoder.cpp  GifEncoder.h
gif/algorithm/: NeuQuant.cpp  NeuQuant.h
gif/giflib/: dgif_lib.cpp  gif_hash.h  gifalloc.cpp
